--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,39 @@
 header {
+    background-color: rgb(24, 155, 116);
+    display: flex;    
+    justify-content: space-between;
+}
+
+header h1{
+    margin-left: 50px;
+}
+nav{
+    display: flex;
+    align-items: center;
+}
+
+nav a{
+    color: #000000;
+    padding: 10px;
+    text-decoration: none;
+}
+
+.CartWidget{
     background-color: aqua;
+}
+
+.carrito{
+    display: flex;
+    align-items: center;
+    margin-right: 150px;
+}
+
+.botonCarrito{
+    padding: 5px;
+    margin: 15px;
+}
+
+.contador{
+    margin-left: 100px;
+    font-size: 20px;
 }
