--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 header {
-    background-color: rgb(24, 155, 116);
+    background: rgb(232,151,126);
+    background: linear-gradient(180deg, rgba(232,151,126,1) 0%, rgba(226,146,140,1) 85%);
     display: flex;    
     justify-content: space-between;
+    align-items: center;
+    height: 70px;
 }
 
 header h1{
-    margin-left: 50px;
+    margin-left: 150px;
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 30px;
+    color: #ffffff;
 }
 nav{
     display: flex;
@@ -16,6 +27,9 @@ nav a{
     color: #000000;
     padding: 10px;
     text-decoration: none;
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 20px;
+    color: #ffffff;
 }
 
 .CartWidget{
@@ -28,6 +42,13 @@ nav a{
     margin-right: 150px;
 }
 
+.material-symbols-outlined p {
+    margin-left: 10px;
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 20px;
+    color: #ffffff;
+}
+
 .botonCarrito{
     padding: 5px;
     margin: 15px;
@@ -36,4 +57,45 @@ nav a{
 .contador{
     margin-left: 100px;
     font-size: 20px;
+}
+
+.item{
+    display: inline-block;
+    margin: 50px 7% 0 7%;
+    border: #000000 solid 1px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 10px 16px;
+    background-color: #E59583;
+
+}
+.item:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.item h1{
+    text-align: center;
+}
+
+.item img{
+    width: 100%;
+}
+
+.item p{
+    text-align: center;
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 20px;
+    
+}
+
+.botonAgregar{
+    border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
 }
