--- a/src/styles.css
+++ b/src/styles.css
@@ -99,3 +99,15 @@ nav a{
   width: 100%;
   font-size: 18px;
 }
+
+
+.detailContainer {
+    margin-top: 50px;
+    display: flex;
+    border: 2px solid red;
+    align-items: center;
+}
+
+.detail{
+    margin-left: 50px;
+}
